# MachineReassignment

./: CMakeLists.txt  MachineReassignment  MachineReassignment.cpp  README.md  bestSolution.csv  car-sequencing.cpp  combineResults.py  cp_solver.mzn  data.dzn  main.cpp  main1.cpp  mainCarSequencing.cpp  nn_queens.cpp  nqeue  ortoolsTest  ortoolsTest.cpp  readyToRun.bat  runScript.xlsx  runScript_79to86.xlsx  runScript_87.xlsx  runScript_87to88.xlsx  runScript_Neighbourhood_100-106.xlsx  runScript_Neighbourhood_107-111.xlsx  runScript_Neighbourhood_112-113.xlsx  runScript_Neighbourhood_114-121.xlsx  runScript_Neighbourhood_122-123.xlsx  runScript_NoiseObjFunc_62to65.xlsx  runScript_NoiseObjFunc_65to70.xlsx  runScript_NoiseObjFunc_71to78.xlsx  runScript_RRSLDS_56to61.xlsx  runScript_RRS_Failures_LDS_initialSize41to55.xlsx  runScript_fixSize.xlsx  runScript_random.xlsx  runScript_random_17to19.xlsx  runScript_random_big_steps.xlsx  runScript_random_fixSize36to40.xlsx  runScript_random_initialSize30to35.xlsx  script.run  script1.run  script2.run  (+7 more)
base/: CarParameter.h  Parameter.h
chuffed/branching/: branching.cpp  branching.h
chuffed/core/: conflict.cpp  engine.cpp  engine.h  init.cpp  options.cpp  options.h  propagator.h  sat.cpp  sat.h  stats.cpp
chuffed/examples/: bibd.cpp  blackhole.cpp  concert_hall.cpp  concert_hall_sym.cpp  cross.cpp  fdpent.cpp  golomb.cpp  graceful_graph.cpp  graph_colouring.cpp  graph_colouring_sym.cpp  graph_colouring_sym2.cpp  grid_colouring.cpp  latin_square.cpp  magic_square.cpp  mosp.cpp  non.cpp  nurse.cpp  photo.cpp  queens.cpp  rcpsp.cpp  shift.cpp  steel_mill.cpp  template.cpp  wreg_shift.cpp
chuffed/flatzinc/: flatzinc.cpp  flatzinc.h  fzn-chuffed.cpp  lexer.lxx  lexer.yy.cpp  parser.tab.cpp  parser.yxx  registry.cpp
chuffed/globals/: alldiff.cpp  bool_arg_max.cpp  circuit.cpp  cumulative.cpp  cumulativeCalendar.cpp  directives.cpp  disjunctive.cpp  globals.h  lex.cpp  linear-bool-decomp.cpp  linear-bool.cpp  mddglobals.cpp  mddglobals.h  minimum.cpp  regular.cpp  subcircuit.cpp  sym-break.cpp  table.cpp  template.cpp  well-founded.cpp
chuffed/ldsb/: ldsb.cpp  ldsb.h
chuffed/mdd/: CYK.h  MDD.cpp  MDD.h  MurmurHash3.cpp  circ_fns.h  circutil.h  mdd_prop.cpp  mdd_prop.h  mdd_to_lgraph.cpp  mdd_to_lgraph.h  opcache.cpp  sorters.h  weighted_dfa.cpp  weighted_dfa.h  wmdd_prop.cpp  wmdd_prop.h
chuffed/mip/: mip.cpp  mip.h  recalc.cpp  simplex.cpp  simplex.h
chuffed/parallel/: master.cpp  parallel.h  slave.cpp
chuffed/primitives/: arithmetic.cpp  binary.cpp  bool.cpp  domain.cpp  element.cpp  linear.cpp  primitives.h
chuffed/support/: heap.h  misc.h
chuffed/vars/: bool-view.cpp  bool-view.h  int-var-el.cpp  int-var-el.h  int-var-ll.cpp  int-var-sl.cpp  int-var-sl.h  int-var.cpp  int-var.h  int-view.h  modelling.cpp  modelling.h  vars.h
class/: CarSeqProblem.cpp  CarSeqProblem.h  Instance.cpp  Instance.h  Model.cpp  Search.cpp  Search.h  SubProblem.cpp  SubProblem.h  carSequencing.cpp  matplotlibcpp.h
ortoolsTest.dSYM/Contents/: Info.plist
ortoolsTest.dSYM/Contents/Resources/DWARF/: ortoolsTest
